feature\arrayList -> linkedList